Improve ditap page loading

--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -7,27 +7,30 @@ redirect_from:
 excerpt: Learn the skills required to master the art of digital acquisition through our expert-led, 6-month, part-time course.
 tags: [digital acquisition training, agile acquisition training]
 class: ditap
+preload: hero-training-single.svg
 class_1_spots:
 class_2_spots:
 ---
 
-<div class="hero hero-banner bg-blue"
-    style="
-      background-image: url(/img/hero-training-single.svg);
-      background-repeat: no-repeat;
-      background-size: cover;"
->
-  <div class="container hero-container container-fluid">
-    <div class="row">
-      <div class="col-12 col-lg-7 mx-auto">
-        <h1 class="hero-heading text-shadow">Digital IT Acquisition Professional (DITAP) Training</h1>
-        <p class="hero-content text-shadow">Learn the skills required to master the art of digital acquisition through our expert-led, 6-month, part-time course. Upon completion, you'll earn the Federal Acquisition Certification in Contracting Core-Plus Specialization in Digital Services (FAC-C-DS) and up to 80 Continuous Learning Points.</p>
-        <div class="hero-btn-group mt-2">
-          <div class="hero-btn-wrapper pr-1">
-            <a class="btn btn-warning text-dark mr-2 mt-sm-3" href="/work/services/training/ditap/apply">Apply now <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></a>
-          </div>
-          <div class="hero-btn-wrapper pl-1">
-            <a class="btn btn-outline-light mt-sm-3" href="/assets/Skylight-DITAP-Syllabus.pdf">Read syllabus</a>
+<div class="bg-blue">
+  <div class="hero hero-banner"
+      style="
+        background-image: url(/img/hero-training-single.svg);
+        background-repeat: no-repeat;
+        background-size: cover;"
+  >
+    <div class="container hero-container container-fluid">
+      <div class="row">
+        <div class="col-12 col-lg-7 mx-auto">
+          <h1 class="hero-heading text-shadow">Digital IT Acquisition Professional (DITAP) Training</h1>
+          <p class="hero-content text-shadow">Learn the skills required to master the art of digital acquisition through our expert-led, 6-month, part-time course. Upon completion, you'll earn the Federal Acquisition Certification in Contracting Core-Plus Specialization in Digital Services (FAC-C-DS) and up to 80 Continuous Learning Points.</p>
+          <div class="hero-btn-group mt-2">
+            <div class="hero-btn-wrapper pr-1">
+              <a class="btn btn-warning text-dark mr-2 mt-sm-3" href="/work/services/training/ditap/apply">Apply now <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></a>
+            </div>
+            <div class="hero-btn-wrapper pl-1">
+              <a class="btn btn-outline-light mt-sm-3" href="/assets/Skylight-DITAP-Syllabus.pdf">Read syllabus</a>
+            </div>
           </div>
         </div>
       </div>
