--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -5,24 +5,27 @@ permalink: /work/services/training/ditap-executive/
 excerpt: Learn how to transform the way your agency procures modern technology products and services through a condensed, 1-day version of our 6-month DITAP training program.
 tags: [digital acquisition training, agile acquisition training]
 class: ditap
+preload: hero-training-single.svg
 class_1_spots:
 class_2_spots:
 ---
 
-<div class="hero hero-banner bg-blue"
-    style="
-      background-image: url(/img/hero-training-single.svg);
-      background-repeat: no-repeat;
-      background-size: cover;"
->
-  <div class="container hero-container container-fluid">
-    <div class="row">
-      <div class="col-12 col-lg-7 mx-auto">
-        <h1 class="hero-heading text-shadow">{{ page.title }}</h1>
-        <p class="hero-content text-shadow">{{ page.excerpt }}</p>
-        <div class="hero-btn-group mt-2">
-          <div class="hero-btn-wrapper pr-1">
-            <a class="btn btn-warning text-dark mr-2 mt-sm-3" href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308">Register now <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></a>
+<div class="bg-blue">
+  <div class="hero hero-banner"
+      style="
+        background-image: url(/img/hero-training-single.svg);
+        background-repeat: no-repeat;
+        background-size: cover;"
+  >
+    <div class="container hero-container container-fluid">
+      <div class="row">
+        <div class="col-12 col-lg-7 mx-auto">
+          <h1 class="hero-heading text-shadow">{{ page.title }}</h1>
+          <p class="hero-content text-shadow">{{ page.excerpt }}</p>
+          <div class="hero-btn-group mt-2">
+            <div class="hero-btn-wrapper pr-1">
+              <a class="btn btn-warning text-dark mr-2 mt-sm-3" href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308">Register now <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></a>
+            </div>
           </div>
         </div>
       </div>
