Update fade-in experience

--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -12,13 +12,12 @@ class_1_spots:
 class_2_spots:
 ---
 
-<div class="bg-blue">
-  <div class="hero hero-banner"
-      style="
-        background-image: url(/img/hero-training-single.svg);
-        background-repeat: no-repeat;
-        background-size: cover;"
-  >
+<div class="bg-blue"
+  style="
+    background-image: url(/img/hero-training-single.svg);
+    background-repeat: no-repeat;
+    background-size: cover;">
+  <div class="hero hero-banner">
     <div class="container hero-container container-fluid">
       <div class="row">
         <div class="col-12 col-lg-7 mx-auto">
