Fix alignment of hero

--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -10,12 +10,12 @@ class_1_spots:
 class_2_spots:
 ---
 
-<div class="bg-blue"
+<div class="bg-blue hero-banner"
   style="
     background-image: url(/img/hero-training-single.svg);
     background-repeat: no-repeat;
     background-size: cover;">
-  <div class="hero hero-banner">
+  <div class="hero">
     <div class="container hero-container container-fluid">
       <div class="row">
         <div class="col-12 col-lg-7 mx-auto">
