add new case study

--- a/_projects/ct-families-experiencing-homelessness.html
+++ b/_projects/ct-families-experiencing-homelessness.html
@@ -115,7 +115,7 @@ source_code_url:
 
   <p>
     To show how these improvements could be made, we delivered detailed recommendations
-    as part of our research report, as well as a design and technical prototypes.
+    as part of our research report, as well as design and technical prototypes.
   </p>
 {% endcapture %}
 
