--- a/_projects/united_nations_accessibility.html
+++ b/_projects/united_nations_accessibility.html
@@ -53,11 +53,11 @@ source_code_url:
 
 {% capture solution %}
   <p>
-    We kicked off the project with a compliance audit of the conference
-    website's accessibility deficiencies and generated a report of pressing
-    issues. The audit included a review of images, colors, contrast ratios,
-    outlines, and other content. Working with the internal team, we fixed the
-    underlying issues and rewrote code to make the website meet the WCAG 2.0
+    Leveraging <a href="/work/toolkits/accessibility-guide/">Skylight's Accessibility Guide</a>, we kicked off the project with
+    a compliance audit of the conference website's accessibility deficiencies and
+    generated a report of pressing issues. The audit included a review of images,
+    colors, contrast ratios, outlines, and other content. Working with the internal team,
+    we fixed the underlying issues and rewrote code to make the website meet the WCAG 2.0
     accessibility standards. Finally, we tested the website with persons with
     disabilities who use screen readers and keyboard inputs. The work was
     completed in two weeks to meet the conference deadline.
