--- a/_projects/ct_oec_care4kids_auto_notifier.html
+++ b/_projects/ct_oec_care4kids_auto_notifier.html
@@ -10,7 +10,7 @@ feature_image_description:
 feature_image_shadow:
 order: 30
 display: true
-tags: [service delivery, research & design, product management, software delivery, early childhood, social safety net, abby raskin, ashley treni, victoria suwardiman, cailyn hansen, gabriel ramirez, marvo dolor, amelia wellers]
+tags: [service delivery, research & design, product management, software delivery, early childhood, social safety net, economic development, abby raskin, ashley treni, victoria suwardiman, cailyn hansen, gabriel ramirez, marvo dolor, amelia wellers]
 excerpt: An SMS-based notification tool launched to better support the needs and understand the pain points of families seeking help to pay for child care in Connecticut.
 project_members:
   - abby-raskin
