--- a/_projects/ct_oec_website_redesign.html
+++ b/_projects/ct_oec_website_redesign.html
@@ -38,7 +38,7 @@ practices:
   - Persona development
   - Usability testing
   - Responsive web design
-  - Accessibility review
+  - Accessibility
   - Agile development
   - Rapid prototyping
   - DevSecOps
