--- a/pages/services.html
+++ b/pages/services.html
@@ -44,9 +44,9 @@ preload: hero-services.svg
         <div class="col-sm-6">
           <h3>How we've helped others:</h3>
           <ul>
-            <li>Modernized data collection systems for improving early childhood outcomes in Connecticut</li>
+            <li><a href="/work/experience/ct-ece-reporter/">Modernized data collection systems for improving early childhood outcomes in Connecticut</a></li>
             <li><a href="/work/experience/va-diffusion-marketplace/">Created a knowledge platform for improving how the Veterans Affairs delivers healthcare</a></li>
-            <li>Built an application for improving the U.S. Air Force's aircrew safety and equipment operations</li>
+            <li><a href="/work/experience/usaf-gearfit/">Built an application for improving the U.S. Air Force's aircrew safety and equipment operations</a></li>
           </ul>
         </div>
       </div>
