case study edits

--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -154,7 +154,7 @@ source_code_url:
     </li>
 
     <li>
-      Product recognized by Gen. David L. Goldfein, Chief of Staff of the Air Force,
+      Product recognized by General David Goldfein, Chief of Staff of the Air Force,
       at Air Force industry conference WEPTAC
     </li>
 
