--- a/_projects/ct_oec_care4kids_auto_notifier.html
+++ b/_projects/ct_oec_care4kids_auto_notifier.html
@@ -26,6 +26,7 @@ technologies:
   - MySQL
   - Git / GitHub
 practices:
+  - Product management
   - User research
   - Collaborative design workshops
   - Surveys
