--- a/_projects/ct_oec_website_redesign.html
+++ b/_projects/ct_oec_website_redesign.html
@@ -28,6 +28,7 @@ technologies:
   - CircleCI
   - Docker
 practices:
+  - Product management
   - User research
   - User experience design
   - Design system
