--- a/_projects/talkto.html
+++ b/_projects/talkto.html
@@ -29,6 +29,7 @@ technologies:
   - Amazon Web Services
   - Git / GitHub
 practices:
+  - Product management
   - User research
   - User experience design
   - Lean startup
