case study edit

--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -63,14 +63,11 @@ source_code_url:
 
 {% capture challenge %}
   <p>
-    People who work for organizations in the defense, security, safety, and healthcare
-    fields often experience critical issues with ill-fitting gear that compromise their
-    job performance, their personal safety, and the safety of others.
-  </p>
-
-  <p>
-    These organizations generally don't have good-enough data and systems in place to meet
-    the complex protective equipment needs of their diverse workforce.
+    People who work for organizations in the defense, security, safety, and
+    healthcare fields often experience critical issues with ill-fitting gear
+    that compromise their job performance, their personal safety, and the safety
+    of others. These organizations generally don't have good-enough data and systems
+    in place to meet the complex protective equipment needs of their diverse workforce.
   </p>
 
   <p>
