case study edits

--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -71,9 +71,9 @@ source_code_url:
   </p>
 
   <p>
-    For the U.S. Air Force's Human Systems Division, figuring out how to provide
-    aircrew better-fitting gear is a top priority that goes all the way up to
-    the <a href="https://www.af.mil/News/Article-Display/Article/1801680/new-direction-for-female-specific-flight-equipment/">Secretary</a>,
+    For the U.S. Air Force's Human Systems Division, solving this problem
+    is a top priority that goes all the way up to the
+    <a href="https://www.af.mil/News/Article-Display/Article/1801680/new-direction-for-female-specific-flight-equipment/">Secretary</a>,
     and <a href="https://www.stripes.com/news/us/new-bill-aims-to-get-better-fitting-equipment-to-women-in-the-military-1.609795">even Congress</a>.
     Female pilots in particular lack consistent access to &mdash; or, at least,
     awareness of &mdash; properly-fitting tactical gear and equipment options, exposing
@@ -93,13 +93,12 @@ source_code_url:
 
 {% capture solution %}
   <p>
-    To address this complex, multi-faceted challenge, the U.S. Air Force's Human
-    Systems Division engaged us to build a digital platform called GearFit.
-    The current product vision for GearFit is to encompass several
-    critical capabilties &mdash; such as user-driven feedback, issues reporting & analytics,
-    catalog management & ordering, and training videos &mdash; for use by the entire
-    aircrew population, the operational groups who support them, and potentially other
-    military branches.
+    To address this challenge, the U.S. Air Force's Human Systems Division engaged
+    us to build a digital platform called GearFit. The current product vision for
+    GearFit encompasses several important capabilties, such as user-driven
+    feedback, issues reporting & analytics, catalog management & ordering, and
+    training videos. The target population of users includes all aircrew,
+    the operational groups who support them, and potentially other military branches.
   </p>
 
   <p>
@@ -110,7 +109,7 @@ source_code_url:
     from aircrew and surface it to a range of stakeholders, who can leverage and
     communicate about that data to develop high-quality insights regarding the
     successes and/or failures of personal protective equipment currently employed by
-    aircrew across the Air Force. This focused effort has involved:
+    aircrew across the Air Force. Thus far, this focused effort has involved:
   </p>
 
   <ul>
