case study edit

--- a/_projects/ct_oec_website_redesign.html
+++ b/_projects/ct_oec_website_redesign.html
@@ -47,8 +47,6 @@ practices:
   - Training
   - Pairing
 news_posts:
-  - title: 46 States and Territories to Receive Preschool Development Grants
-    url: https://www.ffyf.org/45-states-and-territories-to-receive-preschool-development-grants/
 project_url: https://www.ctoec.org/learn-more/
 project_cta: See the site
 source_code_url:
@@ -56,13 +54,9 @@ source_code_url:
 
 {% capture summary %}
   <p>
-    In 2019, the Connecticut Office of Early Childhood (OEC)
-    <a href="https://www.acf.hhs.gov/occ/resource/pdg-b-5-initiative">received a grant</a>
-    from the Administration for Children & Families to improve preschool development outcomes
-    for children from birth to the age of five. As part of this grant award, OEC
-    engaged us to transform their web presence into a single, user-focused homepage
-    with clear pathways for different users to access the information and resources
-    they need.
+    The Connecitcut Office of Early Childhood (OEC) engaged us to transform their
+    web presence into a single, user-focused homepage with clear pathways for different
+    users to access the information and resources they need.
   </p>
 {% endcapture %}
 
