case study edit

--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -106,13 +106,18 @@ source_code_url:
     that female pilots are currently facing, we started by engaging the
     Female Fitment program managers under the Human Systems Division to build
     an application that would gather actionable and accurate equipment feedback
-    from aircrew and surface it to a range of stakeholders, who can leverage and
-    communicate about that data to develop high-quality insights regarding the
-    successes and/or failures of personal protective equipment currently employed by
-    aircrew across the Air Force. Thus far, this focused effort has involved:
+    from aircrew and surface it to a range of stakeholders. With that data,
+    these stakeholders could then develop and communicate high-quality insights
+    regarding the successes and/or failures of personal protective equipment
+    currently employed by aircrew across the Air Force. Thus far, this focused
+    effort has involved:
   </p>
 
   <ul>
+    <li>
+      Researching the needs of female pilots
+    </li>
+
     <li>
       Designing and implementing a set of unique application interfaces
       that move data across the organization to rapidly intake aircrew feedback
