case study edit

--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -157,7 +157,7 @@ source_code_url:
 
     <li>
       Product recognized by General David Goldfein, Chief of Staff of the Air Force,
-      at Air Force industry conference WEPTAC
+      at the Air Force industry conference WEPTAC
     </li>
 
     <li>
