--- a/pages/services.html
+++ b/pages/services.html
@@ -148,7 +148,7 @@ preload: hero-services.svg
           <ul>
             <li><a href="/work/experience/va-mobile-product-strategy/">Strategized a better mobile user experience for users of VA.gov</a></li>
             <li><a href="/work/experience/va-api-scorecard-mvp/">Prototyped an API governance tool for the Veterans Affairs</a></li>
-            <li>Advised the Environment Protection Agency on how to proceed with an ailing system</li>
+            <li><a href="/work/experience/epa-sdwis-advice/">Advised the Environment Protection Agency on how to proceed with an ailing system</a></li>
           </ul>
         </div>
       </div>
