--- a/_projects/epa_sdwis_advice.html
+++ b/_projects/epa_sdwis_advice.html
@@ -30,10 +30,11 @@ source_code_url:
 
 {% capture summary %}
   <p>
-    The EPA needed an independent consulting review of the state of their
-    Safe Drinking Water Information System (SDWIS) modernization initiative,
-    including their development contract. We were brought in to facilitate a
-    health-check assessment workshop in order to help the EPA chart a smart path forward.
+    The Environmental Protection Agency (EPA) needed an independent consulting
+    review of the state of their Safe Drinking Water Information System (SDWIS)
+    modernization initiative, including their development contract. We were brought
+    in to facilitate a health-check assessment workshop in order to help the EPA
+    chart a smart path forward.
   </p>
 {% endcapture %}
 
