case study edit

--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -56,7 +56,7 @@ source_code_url:
 {% capture summary %}
   <p>
     Providing better-fitting gear to aircrew, particularly female pilots, is one of
-    the U.S. Air Force's top priorities. The Human Systems Division engaged us
+    the U.S. Air Force's top priorities. Their Human Systems Division engaged us
     to build a platform for modernizing how they manage personnel protective equipment.
   </p>
 {% endcapture %}
