case study edits

--- a/_projects/ca_hhs_agile_training.html
+++ b/_projects/ca_hhs_agile_training.html
@@ -51,10 +51,10 @@ source_code_url:
     For some time, the CHHS Office of Innovation had been working to shift their
     technical and organizational culture toward agile principles. As an
     organization, the Office is responsible for lean design thinking and
-    delivering solutions that solve problems for real people. So it was
-    important for the Office to not only "do" agile, but to "be" agile. But they
-    were experiencing difficulty connecting the elements of agile together, such as
-    planning, testing, and iteration.
+    delivering innovative solutions to important problems. So it was
+    important for the Office to not only "do" agile, but to "be" agile. But
+    they were experiencing difficulty connecting the elements of agile
+    together, such as planning, testing, and iteration.
   </p>
 {% endcapture %}
 
