case study edits

--- a/_projects/ca_hhs_agile_training.html
+++ b/_projects/ca_hhs_agile_training.html
@@ -67,13 +67,10 @@ source_code_url:
     focusing on applying the Scrum practices of planning, story writing,
     story estimation, velocity calcuation, and testing on the Office of
     Innovation's website, which was in need of substantial revision.
-  </p>
-
-  <p>
     We aimed to provide not only coaching in the Scrum framework, but also
-    the energy to help participants ask the right questions of their workflow.
-    In this way, we aimed to provide both an valuable (and fun) learning
-    experience and an improved real-world product.
+    the energy to help participants ask the right questions about their
+    agile process. In this way, we aimed to provide both an valuable
+    learning experience and an improved real-world product.
   </p>
 {% endcapture %}
 
