case study edit

--- a/_projects/ct_oec_website_redesign.html
+++ b/_projects/ct_oec_website_redesign.html
@@ -76,8 +76,8 @@ source_code_url:
   </p>
 
   <p>
-    With more than 75,000 users who rely on OEC's website, this was a clear challenge
-    for OEC in advancing its mission to support young children across the state.
+    This was a clear challenge for OEC in advancing its mission to support young
+    children across the state.
   </p>
 {% endcapture %}
 
