add new case study

--- a/_projects/ct_ece_reporter.html
+++ b/_projects/ct_ece_reporter.html
@@ -1,17 +1,17 @@
 ---
 layout: default
 title_tag: State of Connecticut
-title: Building a data collection tool that supports young children in Connecticut
+title: Building a data collection tool that supports young children
 permalink: /work/experience/ct-ece-reporter/
 image: /img/projects/ct_ece_reporter/ece-reporter.svg
 image_description: A teacher sitting with a young child at a table and a computer screen in the background showing a green checkmark.
 feature_image:
 feature_image_description:
 feature_image_shadow:
-order: 1
+order: 3
 display: true
 tags: [service delivery, research & design, product management, software delivery, legacy modernization, devops, cloud & platforms, data & analytics, apis, security & privacy, early childhood, social safety net, healthcare, education, chris given, julia hogan, cailyn hansen, victoria suwardiman, ashley treni, abby raskin, kyle magida, marvo dolor, amelia wellers]
-excerpt: A user-friendly data collection tool to get accurate information from early care and education providers about the children in their care.
+excerpt: A user-friendly data collection tool to get accurate information from early care and education providers about the children in their care in Connecticut.
 project_members:
   - chris-given
   - julia-hogan
@@ -32,6 +32,7 @@ technologies:
   - SQL Server
   - Amazon Web Services
   - Azure DevOps
+  - Git / GitHub
 practices:
   - Product management
   - User research
@@ -45,7 +46,9 @@ practices:
   - Open-source development
   - API-first development
   - RESTful API architecture
+  - Data management
   - DevSecOps
+  - Security / privacy compliance
   - Containerization
   - Cloud hosting
 news_posts:
