case study edits

--- a/pages/services.html
+++ b/pages/services.html
@@ -112,9 +112,9 @@ preload: hero-services.svg
         <div class="col-sm-6">
           <h3>How we've helped others:</h3>
           <ul>
+            <li><a href="/work/experience/ct-oec-digital-transformation/">Helped transform how the Connecticut Office of Early Childhood delivers services</a></li>
             <li>Supported the U.S. Air Force in building a large-scale digital center of enablement</li>
-            <li>Helped transform how the Connecticut Office of Early Childhood delivers services</li>
-            <li><a href="">Accelerated the Transportation Security Administration's adoption of the cloud</a></li>
+            <li><a href="/work/experience/tsa-cloud-adoption/">Accelerated the Transportation Security Administration's adoption of the cloud</a></li>
           </ul>
         </div>
       </div>
@@ -181,7 +181,7 @@ preload: hero-services.svg
           <h3>How we've helped others:</h3>
           <ul>
             <li><a href="/work/experience/digital-acquisition-accelerator/">Accelerated the development of digital acquisition professionals for multiple agencies</a></li>
-            <li>Trained the California Health and Human Services Agency on agile methods</li>
+            <li><a href="/work/experience/ca-hhs-agile-training/">Trained the California Health and Human Services Agency on agile methods</a></li>
             <li>Grew U.S. Air Force personnel into skilled designers and engineers</li>
           </ul>
         </div>
