case study edit

--- a/_projects/ct_oec_transformation.html
+++ b/_projects/ct_oec_transformation.html
@@ -11,7 +11,7 @@ feature_image_shadow:
 order: 1
 display: true
 tags: [service delivery, procurement, transformation, training, research & design, product management, software delivery, legacy modernization, devops, cloud & platforms, data & analytics, apis, open government, security & privacy, coaching & training, early childhood, social safety net, healthcare, economic development, education, marvo dolor, amelia wellers, abby raskin, lara kohl, ashley treni, victoria suwardiman, chris given, julia hogan, gabriel ramirez, cailyn hansen, kyle magida, brandon mader, chris cairns, shashank khandelwal, colin craig, josh dorothy, sean johnson]
-excerpt: Working with the Connecticut Office of Early Childhood to change how they deliver services.
+excerpt: Partnering with the Connecticut Office of Early Childhood to help change how they deliver services.
 project_members:
   - marvo-dolor
   - amelia-wellers
