case study edit

--- a/_projects/ct_oec_transformation.html
+++ b/_projects/ct_oec_transformation.html
@@ -11,7 +11,7 @@ feature_image_shadow:
 order: 1
 display: true
 tags: [service delivery, procurement, transformation, training, research & design, product management, software delivery, legacy modernization, devops, cloud & platforms, data & analytics, apis, open government, security & privacy, coaching & training, early childhood, social safety net, healthcare, economic development, education, marvo dolor, amelia wellers, abby raskin, lara kohl, ashley treni, victoria suwardiman, chris given, julia hogan, gabriel ramirez, cailyn hansen, kyle magida, brandon mader, chris cairns, shashank khandelwal, colin craig, josh dorothy, sean johnson]
-excerpt: Partnering with the Connecticut Office of Early Childhood to help change how they deliver services.
+excerpt: Partnering with the Connecticut Office of Early Childhood to help change how they deliver services to children and their families.
 project_members:
   - marvo-dolor
   - amelia-wellers
@@ -104,7 +104,10 @@ source_code_url:
 
 {% capture summary %}
   <p>
-    TBD
+    The Connecticut Office of Early Childhood (OEC) is embarking on a journey to
+    change how they deliver user experiences to children, their families, and
+    the professionals who support them throughout Connecticut. We were brought in
+    to help them achieve this important goal.
   </p>
 {% endcapture %}
 
@@ -122,7 +125,7 @@ source_code_url:
 
   <p>
     OEC's ability to successfully execute on their mission depends on the effective
-    use of technology, much of which requires modernizing in order to deliver better
+    use of technology, much of which needs modernizing in order to deliver better
     user experiences.
   </p>
 
@@ -204,8 +207,8 @@ source_code_url:
     </li>
 
     <li>
-      Built up internal digital capacity through talent support,
-      best-practice toolkits, training, and pairing
+      Built up internal digital capacity through talent support, training,
+      pairing, and best-practice toolkits
     </li>
 
     <li>
