--- a/pages/join.html
+++ b/pages/join.html
@@ -99,7 +99,7 @@ preload: hero-join-us.svg
         <div class="image-list row">
           <div class="col-sm-4 col-lg-3">
             <div class="employee-gradient employee-gradient__img">
-              <img class="image-list__employee-img" src="{{ site.baseurl }}/img/people/laura-vlassarev.jpg" alt="Laura Vlassarev">
+              <img class="image-list__employee-img" src="{{ site.baseurl }}/img/people/laura-king.jpg" alt="Laura King">
             </div>
           </div>
           <div class="col-sm-8 col-lg-9">
@@ -108,7 +108,7 @@ preload: hero-join-us.svg
               can make the biggest impact."
             </p>
 
-            <p><i><b>Laura Vlassarev,</b> UX Designer</i></p>
+            <p><i><b>Laura King,</b> UX Designer</i></p>
           </div>
         </div>
 
