--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -19,6 +19,7 @@ project_members:
   - adam-weber
   - nick-clyde
   - mitchell-sipus
+  - maya-benari
 technologies:
   - HTML / CSS / Sass
   - JavaScript
