--- a/_projects/ca_hhs_agile_training.html
+++ b/_projects/ca_hhs_agile_training.html
@@ -60,7 +60,8 @@ source_code_url:
 
 {% capture solution %}
   <p>
-    As a partner to Civic Actions, we helped lead a two-day intensive
+    As a partner to <a href="https://civicactions.com/">Civic Actions</a>,
+    we helped lead a two-day intensive
     training workshop to bring every facet of agile in a personalized,
     coaching environment for the CHHS Office of Innovation. To do that,
     we simulated five sprints in a microcosm within those two days,
