--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -67,7 +67,7 @@ source_code_url:
     People who work for organizations in the defense, security, safety, and
     healthcare fields often experience critical issues with ill-fitting gear
     that compromise their job performance, their personal safety, and the safety
-    of others. These organizations generally don't have good-enough data and systems
+    of others. These organizations generally don't have sufficient data and systems
     in place to meet the complex protective equipment needs of their diverse workforce.
   </p>
 
