--- a/_projects/va_diffusion_marketplace.html
+++ b/_projects/va_diffusion_marketplace.html
@@ -78,7 +78,7 @@ source_code_url: https://github.com/agilesix/diffusion-marketplace
 
 {% capture solution %}
   <p>
-    In collaboration with Agile Six, we've been working with the VHA to address
+    In collaboration with <a href="https://agile6.com/">Agile Six</a>, we've been working with the VHA to address
     this challenge through the delivery of a knowledge management platform called
     the Diffusion Marketplace. The purpose of this platform is to empower VHA
     practitioners and other employees to identify and disseminate promising
