add social sharing img to DITAP exec training page

--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -8,6 +8,8 @@ class: ditap
 preload: hero-training-single.svg
 class_1_spots:
 class_2_spots:
+image: /img/ditap_executive/ditap-executive-training-banner.png
+image_description: Banner for Skylight's DITAP Training, Executive Edition.
 ---
 
 <div class="bg-blue hero-banner"
