--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -8,8 +8,8 @@ class: ditap
 preload: hero-training-single.svg
 class_1_spots:
 class_2_spots:
-image: /img/ditap_executive/ditap-executive-training-banner.png
-image_description: Banner for Skylight's DITAP Training, Executive Edition.
+social_image: /img/ditap_executive/ditap-executive-training-banner.png
+social_image_description: Banner for the executive edition of Skylight's Digital IT Acquisition Professional Training course.
 ---
 
 <div class="bg-blue hero-banner"
