add two png imgs to blog posts

--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -3,13 +3,13 @@ layout: default
 title: "Digital IT Acquisition Professional (DITAP) Training &mdash; Executive Edition"
 permalink: /work/services/training/ditap-executive/
 excerpt: Learn how to transform the way your agency procures modern technology products and services through a condensed, 1-day version of our 6-month DITAP training program.
+image: /img/ditap_executive/ditap-executive-training-banner.png
+image_description: Banner for the executive edition of Skylight's Digital IT Acquisition Professional Training course.
 tags: [digital acquisition training, agile acquisition training]
 class: ditap
 preload: hero-training-single.svg
 class_1_spots:
 class_2_spots:
-social_image: /img/ditap_executive/ditap-executive-training-banner.png
-social_image_description: Banner for the executive edition of Skylight's Digital IT Acquisition Professional Training course.
 ---
 
 <div class="bg-blue hero-banner"
