update case study link

--- a/_projects/ct_oec_website_redesign.html
+++ b/_projects/ct_oec_website_redesign.html
@@ -47,7 +47,7 @@ practices:
   - Training
   - Pairing
 news_posts:
-project_url: https://www.ctoec.org/learn-more/
+project_url: https://www.ctoec.org/
 project_cta: See the site
 source_code_url:
 ---
