img updates; remove notice bar

--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -5,6 +5,8 @@ permalink: /work/services/training/ditap/
 redirect_from:
   - /services/ditap/
 excerpt: Learn the skills required to master the art of digital acquisition through our expert-led, 6-month, part-time course.
+image: /img/ditap_executive/ditap-banner.png
+image_description: Banner of Skylight's Digital IT Acquisition Professional Training course.
 tags: [digital acquisition training, agile acquisition training]
 class: ditap
 preload: hero-training-single.svg
