--- a/_projects/ct_ece_reporter.html
+++ b/_projects/ct_ece_reporter.html
@@ -110,7 +110,7 @@ source_code_url:
 
 {% capture solution %}
   <p>
-    Together with OEC, we are piloting a data collection tool to improve the data
+    Together with OEC, we're piloting a data collection tool to improve the data
     collection process for early child care and education providers who currently
     use ECIS. This new tool will offer a more user-friendly interface, designed to
     consolidate providers' monthly reporting tasks and allow for more control over
