--- a/_projects/ct_oec_website_redesign.html
+++ b/_projects/ct_oec_website_redesign.html
@@ -54,7 +54,7 @@ source_code_url:
 
 {% capture summary %}
   <p>
-    The Connecitcut Office of Early Childhood (OEC) engaged us to transform their
+    The Connecticut Office of Early Childhood (OEC) engaged us to transform their
     web presence into a single, user-focused homepage with clear pathways for different
     users to access the information and resources they need.
   </p>
