--- a/_projects/ct_oec_website_redesign.html
+++ b/_projects/ct_oec_website_redesign.html
@@ -83,7 +83,7 @@ source_code_url:
 
 {% capture solution %}
   <p>
-    To address this challenge, we engaged OEC in an agile, user-centered,
+    To address this challenge, we engaged OEC in an agile, user-centered
     process to support the redesign of their website. This process involved
     collaborating with dozens of OEC users and stakeholders to create a solution that:
   </p>
