--- a/_projects/ct_oec_website_redesign.html
+++ b/_projects/ct_oec_website_redesign.html
@@ -140,8 +140,8 @@ source_code_url:
     </li>
 
     <li>
-      OEC was the first State of Connecticut agency to deliver critical information
-      related to COVID on its website
+      OEC was one of the first agencies within the State of Connecticut
+      to deliver critical, online information related to COVID
     </li>
   </ul>
 {% endcapture %}
