--- a/_projects/ct_oec_website_redesign.html
+++ b/_projects/ct_oec_website_redesign.html
@@ -141,7 +141,7 @@ source_code_url:
 
     <li>
       OEC was one of the first agencies within the State of Connecticut
-      to deliver critical, online information related to COVID
+      to deliver <a href="https://www.ctoec.org/covid-19">critical, online information related to COVID</a>
     </li>
   </ul>
 {% endcapture %}
