--- a/pages/join.html
+++ b/pages/join.html
@@ -66,7 +66,7 @@ preload: hero-join-us.svg
         <div class="image-list row">
           <div class="col-sm-4 col-lg-3">
             <div class="employee-gradient employee-gradient__img">
-              <img class="image-list__employee-img" src="{{ site.baseurl }}/img/people/charlye-delgado.jpg" alt="Charlye Delgado">
+              <img class="image-list__employee-img" src="{{ site.baseurl }}/img/people/charlye-tran.jpg" alt="Charlye Tran">
             </div>
           </div>
           <div class="col-sm-8 col-lg-9">
@@ -76,7 +76,7 @@ preload: hero-join-us.svg
               inspired and talented folks in the industry."
             </p>
 
-            <p><i><b>Charlye Delgado,</b> Product Manager</i></p>
+            <p><i><b>Charlye Tran,</b> Product Manager</i></p>
           </div>
         </div>
 
